@@ -3,6 +3,8 @@ Version 8
 --Added button for clearing a user's list of ignored houses (in case user
   ignores one by mistake).
 
+--Added pencil-scratch marking on blueprints for tiles that have been damaged.
+
 
 
 Version 7 Live Server Fixes
